namespaces/live-1.cloud-platform.service.justice.gov.uk/laa-apply-for-legalaid-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-apply-for-legalaid-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "laa"
    cloud-platform.justice.gov.uk/slack-channel: "apply-dev"
    cloud-platform.justice.gov.uk/application: "laa-apply-for-legalaid"
    cloud-platform.justice.gov.uk/owner: "Apply For Legal Aid dev team: apply@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-apply-for-legal-aid"
